# zcash-web-wallet

./: .gitignore  .prettierrc  .taplo.toml  CHANGELOG.md  CHECKSUMS.json  CLAUDE.md  Cargo.toml  Makefile  PROMPT.md  README.md  package-lock.json  package.json  rust-toolchain.toml
.github/: dependabot.yml
.github/scripts/: verify-checksum-commit.sh
.github/workflows/: ci.yml  coverage.yml  deploy.yml  update-rust.yml
backend/: main.py  pyproject.toml
cli/: Cargo.toml
cli/e2e/: test_cli.sh
cli/src/: main.rs
core/src/: lib.rs  memo.rs  scanner.rs  types.rs  wallet.rs
frontend/: app.js  index.html  integrity-check.js
frontend/e2e/: addresses.spec.js  contacts.spec.js  helpers.js  real-scanning.spec.js  rpc.spec.js  scanner.spec.js  send.spec.js  simple-view.spec.js  theme.spec.js  wallet.spec.js
frontend/js/: addresses.js  app.js  constants.js  decrypt-viewer.js  scanner.js  version.js  views.js  wallet.js
frontend/js/services/: message-sync.js
frontend/js/storage/: messages.js
frontend/pkg/: package.json  zcash_tx_viewer.d.ts  zcash_tx_viewer.js  zcash_tx_viewer_bg.wasm  zcash_tx_viewer_bg.wasm.d.ts
frontend/sass/: style.sass
scripts/: generate-checksums.cjs  generate-checksums.js  verify-checksums.js
wasm-module/: Cargo.toml
wasm-module/src/: lib.rs
