[workspace]
resolver = "2"
members = [
    "wasm-module",
    "cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Zcash crates
zcash_primitives = { version = "0.26", default-features = false }
zcash_protocol = "0.7"
zcash_address = "0.10"
zcash_keys = { version = "0.12", default-features = false }
zip32 = "0.2"
sapling-crypto = { version = "0.6", default-features = false }
orchard = { version = "0.12", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Crypto
bech32 = "0.11"
rand = "0.8"
