[workspace]
resolver = "2"
members = ["wasm-module", "cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Zcash crates
zcash_primitives = { version = "0.26.4", default-features = false }
zcash_protocol = "0.7"
zcash_address = "0.10"
zcash_keys = { version = "0.12", default-features = false }
zcash_note_encryption = "0.4.1"
zip32 = "0.2"
zcash_transparent = "0.6"
sapling-crypto = { version = "0.6", default-features = false }
orchard = { version = "0.11", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Crypto
bech32 = "0.11"
bip39 = "2.1"
rand = "0.8"
