[workspace]
resolver = "2"
members = ["core", "wasm-module", "cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# HTML builder
html-builder = { git = "https://github.com/LeakIX/html-builder.git", package = "html-builder", features = ["macros"] }
html-bootstrap = { git = "https://github.com/LeakIX/html-builder.git", package = "html-bootstrap" }
html-elements = { git = "https://github.com/LeakIX/html-builder.git", package = "html-elements" }


# Zcash crates
orchard = { version = "0.11", default-features = false }
sapling-crypto = { version = "0.6", default-features = false }
zcash_address = "0.10"
zcash_keys = { version = "0.12", default-features = false }
zcash_note_encryption = "0.4.1"
zcash_primitives = { version = "0.26.4", default-features = false }
zcash_protocol = "0.7.2"
zcash_transparent = { version = "0.6", default-features = false }
zip32 = "0.2"

# Serialization
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
bech32 = "0.11"
bip39 = "2.1"
rand = "0.8"
secp256k1 = "0.29"

# CLI
clap = { version = "4.5", features = ["derive"] }

# HTTP
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
