[tool.poetry]
name = "zcash-tx-viewer-backend"
version = "0.1.0"
description = "Backend API for Zcash Shielded Transaction Viewer"
authors = ["Danny Willems <be.danny.willems@gmail.com>"]
readme = "README.md"
packages = [{include = "main.py"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
httpx = "^0.28.0"
pydantic = "^2.10.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["main"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
