[package]
name = "zcash-wallet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for generating Zcash testnet wallets"

[[bin]]
name = "zcash-wallet"
path = "src/main.rs"

[dependencies]
# Zcash crates
orchard = { workspace = true, features = ["std"] }
sapling-crypto = { workspace = true, features = ["std"] }
zcash_address.workspace = true
zcash_keys = { workspace = true, features = ["std", "orchard", "sapling", "transparent-inputs"] }
zcash_primitives.workspace = true
zcash_protocol.workspace = true
zcash_transparent.workspace = true
zip32.workspace = true

# CLI
clap = { version = "4.5", features = ["derive"] }

# Crypto
bip39.workspace = true
rand.workspace = true

# Serialization
hex.workspace = true
serde.workspace = true
serde_json.workspace = true

# HTTP client for RPC
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Note encryption/decryption
zcash_note_encryption.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Other
bech32.workspace = true
