[package]
name = "zcash-tx-viewer"
version = "0.1.0"
edition = "2024"
description = "WASM module for decrypting Zcash shielded transactions"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Zcash crates
zcash_primitives = "0.26"
zcash_client_backend = "0.21"
orchard = "0.12"
sapling-crypto = "0.6"
zcash_protocol = "0.7"
zcash_address = "0.10"
zcash_keys = "0.12"
zip32 = "0.2"

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Error handling
thiserror = "2.0"

# Crypto utilities
bech32 = "0.11"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
